# pantheon-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml
.bruno/: Fetch airtable users.bru  bruno.json
migrations/: 20240414203259_initial.down.sql  20240414203259_initial.up.sql  20240418161341_create_jobs_table.down.sql  20240418161341_create_jobs_table.up.sql
src/: cli.rs  main.rs
src/app/: controllers.rs  errors.rs  mod.rs
src/app/api/: api_error.rs  api_response.rs  mod.rs
src/app/api/v1/: mod.rs
src/app/api/v1/airtable/: controllers.rs  mod.rs
src/app/api/v1/datasource/: controllers.rs  helpers.rs  mod.rs  requests.rs  responses.rs
src/app/api/v1/gsuite/: mod.rs
src/app/api/v1/jobs/: controllers.rs  mod.rs
src/app/api/v1/users/: controllers.rs  mod.rs  requests.rs  tasks.rs
src/app/jobs/: mod.rs
src/app/middleware/: mod.rs
src/auth/: auth0.rs  mod.rs  userdata.rs
src/services/: mod.rs
src/services/airtable/: bases.rs  mod.rs  record.rs  schema.rs  tests.rs
src/services/auth/: auth0.rs  mod.rs  userdata.rs
src/services/storage/: cache.rs  dto.rs  entities.rs  errors.rs  mod.rs  sql.rs  types.rs
src/services/workspace/: mod.rs  service_account.rs  users.rs
src/state/: mod.rs
