[package]
name = "pantheon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
axum = { version = "0.7.5", features = [
  "http2",
  "ws",
  "macros",
  "multipart",
  "tracing",
  "tokio",
  "form",
  "query",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
csv = "1.3.0"
derive_builder = "0.20.0"
dotenvy = "0.15.7"
hyper = "1.2.0"
jsonwebtoken = "9.3.0"
log = "0.4.21"
mobc = "0.8.4"
mobc-redis = "0.8.2"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = [
  "cookies",
  "gzip",
  "brotli",
  "json",
  "multipart",
  "stream",
] }
sendgrid = { version = "0.21.0", features = ["rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
sqlx = { version = "0.7.4", features = [
  "time",
  "uuid",
  "postgres",
  "chrono",
  "runtime-tokio",
  "macros",
] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
